--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 
 
 <main class="main">
+<app-header></app-header>
+<app-contenido></app-contenido>
+<app-footer></app-footer>
   </main>
 <router-outlet />
