--- a/src/app/components/contenido/contenido.component.html
+++ b/src/app/components/contenido/contenido.component.html
@@ -1,1 +1,6 @@
-<p>contenido works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <img src="../../img/home.png" class="img-fluid">
+    </div>
+  </div>
