--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,30 +1,13 @@
 footer {
-    background-color: #333;
+    background-color: #293e5d;
     color: white;
     padding: 20px 0;
+    font-family: Arial, Helvetica, sans-serif; /* Cambia la fuente del texto según tus preferencias */;
+
 }
 
 .container {
     max-width: 960px;
     margin: 0 auto;
     text-align: center;
-}
-
-footer ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-footer ul li {
-    display: inline;
-    margin: 0 10px;
-}
-
-footer ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-footer ul li a:hover {
-    color: #ffcc00;
 }
