--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,15 @@
 <header>
     <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Admin</a></li>
-        </ul>
+        <div class="logo-title">
+            <img src="../../../assets/img/logo_Sant.png" alt="">
+            <h1>Club Voleibol Sant Andreu</h1>
+        </div>
+        <div class="menu-icon">
+            <ul>
+                <li><a routerLink="contenido">Inicio</a></li>
+                <li><a routerLink="productos">Productos</a></li>
+                <li><a routerLink="padmin">Admin</a></li>
+            </ul>
+        </div>
     </nav>
 </header>
