--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
             <ul>
                 <li><a routerLink="contenido">Inicio</a></li>
                 <li><a routerLink="productos">Productos</a></li>
-                <li><a routerLink="padmin">Admin</a></li>
+                <li><a routerLink="product-form">Admin</a></li>
             </ul>
         </div>
     </nav>
