--- a/src/app/components/Contenidos/product-form/product-form.component.html
+++ b/src/app/components/Contenidos/product-form/product-form.component.html
@@ -1,3 +1,5 @@
+<h1>Formulario de añadir producto</h1>
+
 <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
   <div>
       <label for="nombre">Nombre:</label>
