--- a/src/app/components/Contenidos/product-form/product-form.component.css
+++ b/src/app/components/Contenidos/product-form/product-form.component.css
@@ -1,47 +1,51 @@
 /* Estilo para el contenedor del formulario */
-.product-form-container {
-    max-width: 500px;
-    margin: 0 auto;
-  }
-  
-  /* Estilo para los elementos del formulario */
-  .product-form-container label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .product-form-container input[type="text"],
-  .product-form-container input[type="number"],
-  .product-form-container textarea,
-  .product-form-container select {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-  }
-  
-  .product-form-container input[type="checkbox"] {
-    margin-right: 5px;
-  }
-  
-  .product-form-container button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .product-form-container button:hover {
-    background-color: #45a049;
-  }
-  
-  /* Estilo para los mensajes de error */
-  .product-form-container div.error {
-    color: red;
-    font-size: 14px;
-  }
-  
+form {
+  max-width: 500px;
+  margin: 223px auto; /* Margen arriba y abajo */
+  padding: 20px;
+  border: 1px solid #ccc; /* Borde */
+  border-radius: 4px;
+  background-color: #f9f9f9; /* Color de fondo */
+}
+
+/* Estilo para los elementos del formulario */
+form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+form input[type="text"],
+form input[type="number"],
+form textarea,
+form select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+form input[type="checkbox"] {
+  margin-right: 5px;
+}
+
+form button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: #45a049;
+}
+
+/* Estilo para los mensajes de error */
+form div.error {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
+}
