--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,14 @@
-<header>
-    <nav>
-        <div class="logo-title">
-            <img src="../../../assets/img/logo_Sant.png" alt="">
-            <h1>Club Voleibol Sant Andreu</h1>
+<header class="bg-blue-800 py-5">
+    <nav class="container mx-auto flex justify-between items-center">
+        <div class="flex items-center">
+            <img src="../../../assets/img/logo_Sant.png" alt="" class="w-12 h-12 rounded-full mr-2">
+            <h1 class="text-white text-lg">Club Voleibol Sant Andreu</h1>
         </div>
         <div class="menu-icon">
-            <ul>
-                <li><a routerLink="contenido">Inicio</a></li>
-                <li><a routerLink="productos">Productos</a></li>
-                <li><a routerLink="product-form">Admin</a></li>
+            <ul class="flex">
+                <li class="mx-2"><a routerLink="contenido" class="text-white hover:text-yellow-400">Inicio</a></li>
+                <li class="mx-2"><a routerLink="products" class="text-white hover:text-yellow-400">Productos</a></li>
+                <li class="mx-2"><a routerLink="formproduct" class="text-white hover:text-yellow-400">Admin</a></li>
             </ul>
         </div>
     </nav>
