--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer>
-    <div class="container">
-        <p>Todos los derechos reservados &copy; 2022</p>
+<footer class="bg-blue-800 text-white py-5">
+    <div class="container mx-auto text-center">
+        <p class="text-sm">&copy; 2024 Todos los derechos reservados</p>
     </div>
 </footer>
