--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,60 +1,4 @@
-/* Estilos para el encabezado */
-header {
-    background-color: #293e5d; /* Cambia el color de fondo según tus preferencias */
-    padding: 10px 0; /* Añade espacio interno arriba y abajo */
-    font-family: Arial, Helvetica, sans-serif; /* Cambia la fuente del texto según tus preferencias */
-}
+header{
+    background-color: #395277;
 
-/* Estilos para la barra de navegación */
-nav {
-    display: flex; /* Muestra los elementos en una línea */
-    align-items: center; /* Centra verticalmente los elementos */
-    justify-content: space-between; /* Distribuye el espacio entre los elementos */
-}
-
-.logo-title {
-    display: flex; /* Muestra los elementos en una línea */
-    align-items: center; /* Centra verticalmente los elementos */
-}
-
-.logo-title img {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-    margin-left: 10%;
-}
-
-nav ul {
-    list-style-type: none; /* Quita los puntos de la lista */
-    padding: 0;
-    margin: 0;
-    display: flex; /* Muestra los elementos de la lista en línea */
-    justify-content: center; /* Centra horizontalmente los elementos de la lista */
-}
-
-nav li {
-    margin: 0 10px; /* Añade margen a los elementos de la lista */
-}
-
-nav a {
-    color: white; /* Cambia el color del texto según tus preferencias */
-    text-decoration: none; /* Quita el subrayado de los enlaces */
-    font-size: 18px; /* Cambia el tamaño del texto según tus preferencias */
-    font-weight: bold; /* Añade negrita al texto */
-    
-}
-
-nav a:hover {
-    color: #ffcc00; /* Cambia el color del texto al pasar el ratón sobre los enlaces */
-}
-
-h1 {
-    color: white; /* Cambia el color del texto según tus preferencias */
-    font-size: 24px; /* Cambia el tamaño del texto según tus preferencias */
-    margin: 0; /* Quita el margen del título */
-}
-
-.menu-icon {
-    text-align: center;
 }
