--- a/src/app/components/Contenidos/form-products/form-products.component.html
+++ b/src/app/components/Contenidos/form-products/form-products.component.html
@@ -1,28 +1,28 @@
-<div class="form-container mt-10">
-    <form class="form" [formGroup]="productForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
+<div class="flex flex-col items-center mb-96 mt-32 ">
+    <form class="bg-gray-100 p-8 rounded-lg shadow-md w-full max-w-md" [formGroup]="productForm" (ngSubmit)="onSubmit()">
+        <div class="flex flex-col mb-5">
             <label for="name">Nombre (máx: 20)*</label>
-            <input type="text" name="name" id="name" formControlName="name" [(ngModel)]="nameValue">
-            @if (nameValue === ''){<p class="error-message">Nombre requerido</p>}
-            @if (nameValue.length > 20){<p class="error-message">Nombre demasiado largo</p>}
+            <input type="text" name="name" id="name" formControlName="name" [(ngModel)]="nameValue" class="border border-gray-300 rounded p-2">
+            @if (nameValue === '') { <p class="text-red-500 text-xs mt-1">Nombre requerido</p> }
+            @if (nameValue.length > 20) { <p class="text-red-500 text-xs mt-1">Nombre demasiado largo</p> }
             <label for="description">Descripción (máx: 30)*</label>
-            <textarea name="description" id="description" rows="3" [disabled]="true" formControlName="description" [(ngModel)]="descriptionValue"></textarea>
-            @if (descriptionValue === ''){<p class="error-message">Descripción requerida</p>}
-            @if (descriptionValue.length > 30){<p class="error-message">Descripción demasiado larga</p>}
+            <textarea name="description" id="description" rows="3" [disabled]="true" formControlName="description" [(ngModel)]="descriptionValue" class="border border-gray-300 rounded p-2"></textarea>
+            @if (descriptionValue === '') { <p class="text-red-500 text-xs mt-1">Descripción requerida</p> }
+            @if (descriptionValue.length > 30) { <p class="text-red-500 text-xs mt-1">Descripción demasiado larga</p> }
         </div>
-        <div class="form-group">
+        <div class="flex flex-col mb-5">
             <label for="price">Precio*</label>
-            <input type="number" name="price" id="price" formControlName="price" [(ngModel)]="priceValue">
-            @if (priceValue === 0){<p class="error-message">Precio requerido</p>}
-            @if (priceValue < 0){<p class="error-message">Precio inválido</p>}
-                @if (priceValue > 10000){<p class="error-message">Precio demasiado alto</p>}
+            <input type="number" name="price" id="price" formControlName="price" [(ngModel)]="priceValue" class="border border-gray-300 rounded p-2">
+            @if (priceValue === 0) { <p class="text-red-500 text-xs mt-1">Precio requerido</p> }
+            @if (priceValue < 0) { <p class="text-red-500 text-xs mt-1">Precio inválido</p> }
+            @if (priceValue > 10000) { <p class="text-red-500 text-xs mt-1">Precio demasiado alto</p> }
         </div>
-        <div class="form-group">
+        <div class="flex flex-col mb-5">
             <label for="image">Imagen*</label>
-            <input type="file" name="image" id="image" formControlName="image" (change)="onImageSelected($event)">
+            <input type="file" name="image" id="image" formControlName="image" (change)="onImageSelected($event)" class="border border-gray-300 rounded p-2">
         </div>
         <label for="categoria">Categorías*</label>
-        <select name="categoria" id="categoria" formControlName="categoria" [(ngModel)]="categoriaValue">
+        <select name="categoria" id="categoria" formControlName="categoria" [(ngModel)]="categoriaValue" class="border border-gray-300 rounded p-2">
             <option value="" disabled selected>Seleccionar categoría</option>
             <option value="Equipacion L">Equipación Local</option>
             <option value="Equipacion V">Equipación Visitante</option>
@@ -33,14 +33,16 @@
             <option value="Chaqueta">Chaqueta</option>
             <option value="Mochila">Mochila</option>
         </select>
-        @if (categoriaValue === ''){<p class="error-message">Categoría requerida</p>}
-        <input type="checkbox" name="onSale" id="onSale" formControlName="onSale" [(ngModel)]="onSaleValue">
-        <label for="onSale" class="text-lg">En venta</label>
+        @if (categoriaValue === '') { <p class="text-red-500 text-xs mt-1">Categoría requerida</p> }
+        
+        <label for="onSale" class="text-lg text-gray-700">En venta </label>
+        <input type="checkbox" name="onSale" id="onSale" formControlName="onSale" [(ngModel)]="onSaleValue" class="h-6 w-6 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
+    
         @if(productForm.invalid){
-        <button type="submit" class="submit-button" disabled>Enviar</button>
+        <button type="submit" class="disabled:opacity-50 disabled:cursor-not-allowed bg-blue-500 text-white font-medium py-2 px-4 rounded mt-4 w-full">Enviar</button>
         }
         @else{
-        <button type="submit" onclick="sendReviewsSignal()"class="submit-button">Enviar</button>
+        <button type="submit" onclick="sendReviewsSignal()" class="bg-blue-500 text-white font-medium py-2 px-4 rounded mt-4 w-full">Enviar</button>
         }
     </form>
 </div>
