--- a/src/app/components/Contenidos/form-products/form-products.component.html
+++ b/src/app/components/Contenidos/form-products/form-products.component.html
@@ -2,7 +2,7 @@
     <form class="bg-gray-100 p-8 rounded-lg shadow-md w-full max-w-md" [formGroup]="productForm" (ngSubmit)="onSubmit()">
         <div class="flex flex-col mb-5">
             <label for="name">Nombre (máx: 20)*</label>
-            <input type="text" name="name" id="name" formControlName="name" [(ngModel)]="nameValue" class="border border-gray-300 rounded p-2">
+            <input type="text" name="name" id="name" formControlName="name" [(ngModel)]="nameValue" class="border border-gray-300 rounded p-2" required>
             @if (nameValue === '') { <p class="text-red-500 text-xs mt-1">Nombre requerido</p> }
             @if (nameValue.length > 20) { <p class="text-red-500 text-xs mt-1">Nombre demasiado largo</p> }
             <label for="description">Descripción (máx: 30)*</label>
@@ -12,14 +12,14 @@
         </div>
         <div class="flex flex-col mb-5">
             <label for="price">Precio*</label>
-            <input type="number" name="price" id="price" formControlName="price" [(ngModel)]="priceValue" class="border border-gray-300 rounded p-2">
+            <input type="number" name="price" id="price" formControlName="price" [(ngModel)]="priceValue" class="border border-gray-300 rounded p-2" required>
             @if (priceValue === 0) { <p class="text-red-500 text-xs mt-1">Precio requerido</p> }
             @if (priceValue < 0) { <p class="text-red-500 text-xs mt-1">Precio inválido</p> }
             @if (priceValue > 10000) { <p class="text-red-500 text-xs mt-1">Precio demasiado alto</p> }
         </div>
         <div class="flex flex-col mb-5">
             <label for="image">Imagen*</label>
-            <input type="file" name="image" id="image" formControlName="image" (change)="onImageSelected($event)" class="border border-gray-300 rounded p-2">
+            <input type="file" name="image" id="image" formControlName="image" (change)="onImageSelected($event)" class="border border-gray-300 rounded p-2" required>
         </div>
         <label for="categoria">Categorías*</label>
         <select name="categoria" id="categoria" formControlName="categoria" [(ngModel)]="categoriaValue" class="border border-gray-300 rounded p-2">
@@ -36,13 +36,13 @@
         @if (categoriaValue === '') { <p class="text-red-500 text-xs mt-1">Categoría requerida</p> }
         
         <label for="onSale" class="text-lg text-gray-700">En venta </label>
-        <input type="checkbox" name="onSale" id="onSale" formControlName="onSale" [(ngModel)]="onSaleValue" class="h-6 w-6 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
+        <input type="checkbox" name="onSale" id="onSale" formControlName="onSale" [(ngModel)]="onSaleValue" class="h-6 w-6 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500" required>
     
         @if(productForm.invalid){
-        <button type="submit" class="disabled:opacity-50 disabled:cursor-not-allowed bg-blue-500 text-white font-medium py-2 px-4 rounded mt-4 w-full">Enviar</button>
+        <button type="submit" class="disabled:opacity-50 disabled:cursor-not-allowed bg-blue-500 text-white font-medium py-2 px-4 rounded mt-4 w-full" required>Enviar</button>
         }
         @else{
-        <button type="submit" onclick="sendReviewsSignal()" class="bg-blue-500 text-white font-medium py-2 px-4 rounded mt-4 w-full">Enviar</button>
+        <button type="submit" onclick="sendReviewsSignal()" class="bg-blue-500 text-white font-medium py-2 px-4 rounded mt-4 w-full" required>Enviar</button>
         }
     </form>
 </div>
